--- a/students/tiselko_iryna/exam_js-module/src/css/header/_menu.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/header/_menu.scss
@@ -3,96 +3,105 @@
     justify-content: center;
     align-items: center;
 
+    @include media (md){
+        padding-top: 0;
+        padding-left: 85px;
+    }
+
     @include media (){
         justify-content: flex-end;
     }
 
-		// .menu__list
+    // .menu__list
 
-		&__list {
-            list-style-type: none;
-            display: flex;
-            gap: 70px;
-            margin: 0;
-            padding: 0;
+    &__list {
+        list-style-type: none;
+        display: flex;
+        gap: 70px;
+        margin: 0;
+        padding: 0;
 
-            @include media() {
-                display: none;
-                background-image: linear-gradient(243deg, rgb(126, 90, 255) 16.9%, rgb(85, 183, 255) 83.27%);
-                position: fixed;
-                top: 84px;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                width: 100%;
-                flex-direction: column;
-                align-items: center;
-                gap: 40px;
-                transform: translateX(-100%);
-                transition: transform .3s ease-in-out;
+        @include media(md){
+            gap: 30px;
+        }
+
+        @include media() {
+            display: none;
+            background-image: linear-gradient(243deg, rgb(126, 90, 255) 16.9%, rgb(85, 183, 255) 83.27%);
+            position: fixed;
+            top: 84px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px;
+            transform: translateX(-100%);
+            transition: transform .3s ease-in-out;
+    
+            ._open & {
+                transform: translateX(0);
+            }
+        }
+    }
+
+    // .menu__item
+
+    &__item {
+        position: relative;
+
+        &.active {
+            &::before{
+                background-color: $white-color;
+            }
+        }
+
+        &:last-of-type {
+            display: none;
+        }
+
+        &:not(:last-of-type)::before{
+            content: '';
+            display: block;
+            position: absolute;
+            width: 9px;
+            height: 9px;
+            border: 1px solid $white-color;
+            border-radius: 50%;
+            top: 40%;
+            left: -10px;
+        }
+
+        &:hover {
+            &::before{
+                background-color: $white-color;
+            }
+        }
         
-                ._open & {
-                    transform: translateX(0);
-                }
-            }
-		}
-
-		// .menu__item
-
-		&__item {
-            position: relative;
-
-            &.active {
-                &::before{
-                    background-color: $white-color;
-                }
-            }
-
-            &:last-of-type {
-                display: none;
-            }
-
-            &:not(:last-of-type)::before{
-                content: '';
-                display: block;
-                position: absolute;
-                width: 9px;
-                height: 9px;
-                border: 1px solid $white-color;
-                border-radius: 50%;
-                top: 40%;
-                left: -10px;
-            }
-
-            &:hover {
-                &::before{
-                    background-color: $white-color;
-                }
+        @include media() {
+            &:first-of-type {
+                margin-top: 90px;
             }
             
-            @include media() {
-                &:first-of-type {
-                    margin-top: 90px;
-                }
-                
 
-                &:last-of-type {
-                    display: block;
-                }
+            &:last-of-type {
+                display: block;
             }
-		}
+        }
+    }
 
-        // .menu__link
+    // .menu__link
 
-		&__link {
-            font-family: $font-sub-menu, $fallback;
-            font-size: 14px;
-            line-height: normal;
-            color: $white-color;
-            text-decoration:none;
-            text-transform: uppercase;
-            padding: 15px;
-		}
+    &__link {
+        font-family: $font-sub-menu, $fallback;
+        font-size: 14px;
+        line-height: normal;
+        color: $white-color;
+        text-decoration:none;
+        text-transform: uppercase;
+        padding: 15px;
+    }
 }
 
 .menu-open-btn {
@@ -105,6 +114,10 @@
     border: $default-border;
     background-color: transparent;
     margin-right: 20px;
+
+    @include media(){
+        margin-right: -45px;
+    }
 
     ._open & {
         .menu-open-btn__line {
