--- a/students/tiselko_iryna/exam_js-module/src/css/main/_about.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_about.scss
@@ -1,100 +1,91 @@
 .about {
+    margin-top: 130px;
     margin-bottom: 150px;
     position: relative;
     width: 100vw;
+    
+
+    @include media (md) {
+        margin-top: 120px;
+        margin-bottom: 85px;
+    }
+
+    @include media (xs) {
+        margin-bottom: 60px;
+        margin-top: 100px;
+    }
+
+    & .container {
+        @include media (xs) {
+            padding: 0 10px;
+        }
+    }
+
+    & .row {
+        @include media (xs) {
+            padding: 15;
+        }
+    }
 
     // .about__heading
 
     &__heading {
         position: relative;
-        margin-top: 130px;
         padding-bottom: 130px;
         text-align: center;
 
         &::before {
             @extend %heading-pseudo;
             top: -20%;
+
+            @include media (xs) {
+                width: 90px;
+            }
+        }
+
+        @include media (xs) {
+            padding-bottom: 75px;
+        }
+
+        @include media (xxs) {
+           font-size: 34px;
         }
     }
 
     // .about__img-wrapper
 
     &__img-wrapper {
-        padding-bottom: 162px;
+        padding-bottom: 85px;
         z-index: 100;
-    }
 
-    // .about__img
-
-    &__img {
-        display: block;
-        aspect-ratio: 3/4;
-        object-fit: cover;
-        object-position: top;
-
-        @supports not (aspect-ratio: 3/2) {
-            height: 470px;
+        @include media (md) {
+            padding-top: 12px;
         }
-    }
 
-    // .about__content-wrapper
-
-    &__content-wrapper {
-        padding-right: 40px;
+        @include media () {
+            padding-bottom: 50px;
+        }
 
         &-reverse {
+            padding-top: 85px;
 
-            padding-left: 40px;
+            @include media (md) {
+                padding-top: 60px;
+            }
+
+            @include media (xs) {
+                padding-top: 35px;
+            }
         }
-    }
 
-    // .about__suptitle
-
-    &__suptitle {
-        font-family: $secondary-font;
-        font-size: 22px;
-        line-height: normal;
-        padding-top: 84px;
-    }
-
-    // .about__title
-
-    &__title {
-        padding-bottom: 19px;
-    }
-
-    // .about__content
-
-    &__content {
-        width: 470px;
-        padding-bottom: 40px;
-    }
-
-    // .about__btn
-
-    &__btn {
-    }
-
-    // .about__subcontent
-
-    &__subcontent {
-        color: $black-color;
-        font-size: 15px;
-        font-style: italic;
-        padding-top: 60px;
-    }
-
-    // .about__icon
-
-    &__icon {
-        width: 9px;
-        height: 17px;
+        @include media (xs) {
+            padding-bottom: 40px;
+        }
     }
 
     // .about__img-wrapper-reverse
     
     &__img-wrapper{
-        text-align: end;
 
         &::before {
             content: '';
@@ -103,9 +94,40 @@
             width: 100%;
             height: 470px;
             background-color: $malibu;
-            left: -62%;
-            top: 268px;
+            left: -61%;
+            top: 141px;
             z-index: -10;
+
+            @include media (lg) {
+                width: 580px;
+                left: 5%;
+            }
+
+            @include media (md) {
+                width: 400px;
+                height: 335px;
+                left: 8%;
+            }
+
+            @include media () {
+                width: 630px;
+                height: 470px;
+                top: 150px;
+                left: 7%;
+            }
+
+            @include media (xs) {
+                width: 500px;
+                height: 370px;
+                left: 3%;
+            }
+
+            @include media (xxs) {
+                height: 250px;
+                width: 345px;
+                top: 95px;
+                left: 2%;
+            }
         }
     
         &-reverse {
@@ -121,23 +143,205 @@
                 bottom: 74px;
                 right: -64%;
                 z-index: -10;
+
+                @include media (lg) {
+                    width: 580px;
+                    right: 3%;
+                }
+
+                @include media (md) {
+                    width: 400px;
+                    height: 335px;
+                    right: 10%;
+                    bottom: 97px;
+                }
+
+                @include media () {
+                    width: 630px;
+                    height: 470px;
+                    right: 2%;
+                    bottom: 60px;
+                }
+
+                @include media (xs) {
+                    width: 500px;
+                    height: 370px;
+                    bottom: 50px;
+                    right: unset;
+                }
+
+                @include media (xxs) {
+                    height: 250px;
+                    right: 29%;
+                    bottom: 50px;
+                }
             }
         }
     }
-}
 
-.btn {
+    // .about__img
 
-    // .btn__wrapper
+    &__img {
+        display: block;
+        aspect-ratio: 3/4;
+        object-fit: cover;
+        object-position: top;
+        padding: 0 15px;
 
-    &__wrapper {
+        @supports not (aspect-ratio: 3/2) {
+            height: 470px;
+        }
+
+        @include media (lg) {
+            width: 540px;
+        }
+
+        @include media (md) {
+            width: 400px;
+            height: 335px;
+        }
+
+        @include media () {
+            width: 630px;
+            height: 470px;
+        }
+
+        @include media (xs) {
+            width: 500px;
+            height: 370px;
+            margin: 0 auto;
+        }
+
+        @include media (xxs) {
+            width: 345px;
+            height: 250px;
+            padding: 0 65px;
+        }
     }
-}
 
-.btn-primary {
-}
+    // .about__content-wrapper
 
-.icon {
+    &__content-wrapper {
+        padding-right: 40px;
+
+        &-reverse {
+            padding-left: 40px;
+        }
+
+        @include media () {
+            padding-left: 40px;
+        }
+
+        @include media (xxs) {
+            padding: 20px;
+            font-size: 16px;
+        }
+
+        &-reverse {
+            @include media (xs) {
+                padding: 20px;
+                font-size: 16px;
+            }
+        }
+    }
+
+    // .about__suptitle
+
+    &__suptitle {
+        font-family: $secondary-font;
+        font-size: 22px;
+        line-height: normal;
+        padding-top: 84px;
+
+        @include media (md) {
+            padding-top: 0;
+        }
+
+        @include media () {
+            padding-top: 25px;
+        }
+
+        @include media (xs) {
+            padding-top: 20px;
+            font-size: 18px;
+        }
+    }
+
+    // .about__title
+
+    &__title {
+        padding-bottom: 19px;
+
+        @include media (xxs) {
+            font-size: 32px;
+        }
+    }
+
+    // .about__content
+
+    &__content {
+        width: 470px;
+        padding-bottom: 40px;
+
+        @include media (md) {
+            width: 430px;
+        }
+
+        @include media (md) {
+            width: unset;
+        }
+
+        @include media (xxs) {
+            width: 365px;
+            padding-bottom: 20px;
+        }
+    }
+
+    // .about__btn
+
+    &__btn {
+        @include media (xxs) {
+            width: 145px;
+        }
+    }
+
+    // .about__btn-wrapper
+
+    &__btn-wrapper {
+        padding-left: 0;
+    }
+
+
+    // .about__subcontent
+
+    &__subcontent {
+        color: $black-color;
+        font-size: 15px;
+        font-style: italic;
+        padding-top: 60px;
+
+        @include media (md) {
+            padding-top: 25px;
+        }
+
+        @include media () {
+            padding-bottom: 25px;
+        }
+
+        @include media (xxs) {
+            font-size: 12px;
+            padding: 15px 0;
+        }
+    }
+
+    // .about__icon
+
+    &__icon {
+        width: 9px;
+        height: 17px;
+    }
+
+    
 }
 
 .subcontent-text {
