--- a/students/tiselko_iryna/exam_js-module/src/css/main/_gallery.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_gallery.scss
@@ -1,5 +1,18 @@
 .gallery {
     padding-top: 150px;
+    padding-bottom: 150px;
+
+    @include media (xs) {
+        padding-top: 100px;
+        padding-bottom: 75px;
+    }
+
+    & .container {
+        
+        @include media (lg) {
+            padding: 0;
+        }
+    }
 
     // .gallery__heading
 
@@ -12,6 +25,19 @@
         &::before {
             @extend %heading-pseudo;
             top: -36%;
+
+            @include media (xs) {
+                width: 90px;
+                top: -25%;
+            }
+        }
+
+        @include media (xs) {
+            padding-bottom: 50px;
+        }
+
+        @include media (xxs) {
+           font-size: 34px;
         }
     }
 
@@ -23,18 +49,26 @@
         display: grid;
         justify-content: center;
         gap: 10px;
-        grid-template-columns: repeat(auto-fit,minmax(290px, min-content));
-        grid-auto-rows: 215px;
-        grid-auto-flow: dense;
+        grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
+
+        @include media (xs) {
+            padding-top: 15px;
+            gap: 5px;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        }
     }
 
     // .gallery__item
 
     &__item {
-
         &-big {
             grid-column: span 2;
             grid-row: span 2;
+
+            @include media (xs) {
+                grid-column: span 3;
+                grid-row: span 3;
+            }
         }
     }
 
@@ -59,7 +93,6 @@
     &__btn-wrapper {
         display: flex;
         justify-content: center;
-        padding-bottom: 150px;
         padding-top: 30px;
     }
 
