--- a/students/tiselko_iryna/exam_js-module/src/css/main/_hero.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_hero.scss
@@ -48,7 +48,7 @@
 	&__item {
 		position: relative;
 		height: 100vh;
-		display: flex !important;
+		display: flex;
 		justify-content: center;
 		align-items: center;
 
@@ -146,7 +146,7 @@
 		@include media(xxs) {
 			padding-top: 50px;
 		}
-		
+
 	}
 }
 
