--- a/students/tiselko_iryna/exam_js-module/src/css/main/_news.scss
+++ b/students/tiselko_iryna/exam_js-module/src/css/main/_news.scss
@@ -1,7 +1,7 @@
 .news {
 	padding-top: 150px;
     padding-bottom: 155px;
-    background-image: url('#{$base-img-pass}../images/news/news-bg.png'), linear-gradient(237deg, #24ccfa 11.16%, #3C7FD4 89.18%);
+    background-image: url('#{$base-img-pass}images/news/news-bg.png'), linear-gradient(237deg, #24ccfa 11.16%, #3C7FD4 89.18%);
     background-repeat: no-repeat;
     background-position: bottom center;
     background-size: contain;
