--- a/students/savchak_marharyta/exam_1/src/css/main/_testimonial.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_testimonial.scss
@@ -3,19 +3,16 @@
     background-image: url("../../images/testimonial-bg.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% -300px;
+    background-position: 50% 50%;
 
     &__container {
         padding-top: 120px;
-        padding-bottom: 120px;
+        padding-bottom: 180px;
     }
 
     // .testimonial__row
 
-    &__row {
-        padding-bottom: 57px;
-        margin: 0;
-    }
+    &__row {}
 
     // .testimonial__title
 
@@ -25,6 +22,7 @@
         font-size: 36px;
         font-weight: 400;
         line-height: 40px;
+        padding-bottom: 60px;
     }
 
     &__text-quote {
