--- a/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_why_choose_us.scss
@@ -22,12 +22,12 @@
         margin: 0;
         padding-bottom: 30px;
         line-height: 28px;
-        white-space: nowrap;
     }
 
     &__container {
         padding-top: 120px;
-        padding-bottom: 120px;
+        padding-bottom: 124px;
+        padding-right: 112px;
     }
 
     &__button-wrapper {
@@ -67,13 +67,14 @@
 
     &__row {
         display: flex;
-        justify-content: space-between;
-        // gap: 136px;
-        padding-right: 150px;
+        justify-content: space-around;
+        margin: 0 auto;
     }
 
     &__content-wrapper {
         padding-top: 70px;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     &__img-wrapper {
