--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_gallery.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_gallery.scss
@@ -37,13 +37,8 @@
         }
     }
 
-    &__btn-wrapper {
-        padding-top: 60px;
-        text-align: center;
-    }
-
     &__btn {
-        margin: 0 auto;
+        margin: 60px auto;
     }
 }
 
@@ -61,6 +56,20 @@
     @include media(sm) {
         grid-template-columns: 1fr;
         grid-template-rows: repeat(5, minmax(285px, 214px));
+    }
+
+    &_advanced {
+        grid-template-rows: repeat(4, minmax(285px, 214px));
+
+        @include media(lg) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: repeat(7, minmax(285px, 214px));
+        }
+
+        @include media(sm) {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(13, minmax(285px, 214px));
+        }
     }
 
     &__gallery-item {
@@ -89,5 +98,9 @@
         height: 100%;
         object-fit: cover;
         position: absolute;
+    }
+
+    &__hidden-on {
+        display: none;
     }
 }
