--- a/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
+++ b/students/motkaliuk_andrii/monticello_exam2_andrii_motkaliuk/src/css/main/_news.scss
@@ -183,6 +183,8 @@
     background-color: #fff;
 
     &__img {
+        height: 100%;
+        width: 100%;
         aspect-ratio: 2/1.3;
         object-fit: cover;
     }
