--- a/students/savchak_marharyta/exam_1/src/css/_extend.scss
+++ b/students/savchak_marharyta/exam_1/src/css/_extend.scss
@@ -22,3 +22,9 @@
     justify-content: center;
     align-items: center;
 }
+
+%background-positioning {
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
