--- a/students/savchak_marharyta/exam_1/src/css/main/_footer.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_footer.scss
@@ -6,6 +6,17 @@
     &__container {
         padding-top: 80px;
         padding-bottom: 80px;
+
+        @include media(md) {
+            padding-top: 40px;
+            padding-bottom: 40px;
+        }
+
+        @include media(xs) {
+            padding-top: 30px;
+            padding-bottom: 30px;
+        }
+
     }
 
     // .footer__row
@@ -38,6 +49,10 @@
         font-weight: 400;
         line-height: 20px;
         letter-spacing: 2.8px;
+
+        @include media(xs) {
+            padding-bottom: 15px;
+        }
     }
 
     // .footer__menu
