--- a/students/savchak_marharyta/exam_1/src/css/main/_tip.scss
+++ b/students/savchak_marharyta/exam_1/src/css/main/_tip.scss
@@ -6,6 +6,32 @@
         padding-top: 108px;
         padding-bottom: 40px;
         position: relative;
+
+        @include media(md) {
+            padding-top: 60px;
+            padding-bottom: 25px;
+        }
+
+        // @include media(sm) {
+        //     padding-top: 40px;
+        //     padding-bottom: 15px;
+        // }
+
+        // @include media(xs) {
+        //     padding-top: 35px;
+        //     padding-bottom: 13px;
+        // }
+
+        @include media(xxs) {
+            padding-top: 60px;
+            padding-bottom: 25px;
+        }
+
+        @include media(xxxs) {
+            padding-top: 30px;
+            padding-bottom: 10px;
+        }
+
     }
 
     // .tip__title
@@ -15,16 +41,55 @@
         color: $white;
         font-size: 36px;
         margin: 0;
+
+        @include media(md) {
+            font-size: 28px;
+        }
+
+        @include media(sm) {
+            font-size: 24px;
+        }
+
+        @include media(sm) {
+            font-size: 20px;
+        }
+
+        @include media(xxs) {
+            font-size: 18px;
+        }
+
+        @include media(xxxs) {
+            font-size: 10px;
+        }
     }
 
     &__img {
-        width: 65px;
+        @include media(sm) {
+            height: 50px;
+        }
+
+        @include media(xs) {
+            height: 45px;
+        }
+
+        @include media(xs) {
+            height: 40px;
+        }
+
+        @include media(xxxs) {
+            height: 25px;
+        }
+
     }
 
     &__img-wrapper {
-        width: 65px;
+        text-align: center;
         padding-bottom: 14px;
         margin: 0 auto;
+
+        @include media(xxxs) {
+            padding-bottom: 5px;
+        }
     }
 
     &__list {
@@ -32,50 +97,125 @@
         display: flex;
         justify-content: space-between;
         font-family: $section-title-font;
-        padding-right: 100px;
-        padding-left: 100px;
+        padding: 0 100px;
+        white-space: nowrap;
+
+        @include media(md) {
+            padding: 0 60px;
+        }
+
+        @include media(xs) {
+            padding: 0;
+        }
+
+
+        &__item {}
     }
 
 
-    &__item {}
+    .tip__list::before {
+        content: "";
+        border-left: 1px dashed transparent;
+        border-right: 1px dashed transparent;
+        border-bottom: 1px dashed transparent;
+        border-top: 1px dashed $white;
+        border-radius: 50%;
+        width: 37%;
+        height: 125%;
+        position: absolute;
+        z-index: 100;
+        top: 60px;
+        right: 200px;
+        opacity: 0.502;
+
+        @include media(lg) {
+            width: 32%;
+            right: 220px;
+        }
+
+        @include media(md) {
+            width: 28%;
+            top: 30px;
+        }
+
+        @include media(sm) {
+            width: 30%;
+            right: 160px;
+        }
+
+        @include media(xs) {
+            height: 100%;
+            right: 110px;
+            top: 50px;
+        }
+
+        @include media(xxs) {
+            height: 80%;
+            right: 98px;
+            top: 50px
+        }
+
+        @include media(xxxs) {
+            height: 70%;
+            right: 75px;
+            top: 30px;
+        }
+
+    }
+
+    .tip__list::after {
+        content: "";
+        border-left: 1px dashed transparent;
+        border-right: 1px dashed transparent;
+        border-bottom: 1px dashed transparent;
+        border-top: 1px dashed $white;
+        border-radius: 50%;
+        width: 37%;
+        height: 125%;
+        position: absolute;
+        z-index: 100;
+        top: 60px;
+        left: 200px;
+        opacity: 0.502;
+
+        @include media(lg) {
+            width: 32%;
+            left: 220px;
+        }
+
+        @include media(md) {
+            width: 28%;
+            top: 30px;
+
+        }
+
+        @include media(sm) {
+            width: 30%;
+            left: 160px;
+        }
+
+        @include media(xs) {
+            width: 30%;
+            height: 100%;
+            left: 110px;
+            top: 50px
+        }
+
+        @include media(xxs) {
+            height: 80%;
+            left: 98px;
+            top: 50px
+        }
+
+        @include media(xxxs) {
+            height: 70%;
+            left: 75px;
+            top: 30px;
+        }
+
+    }
+
 }
-
-
-.tip__list::before {
-    content: "";
-    border-left: 1px dashed transparent;
-    border-right: 1px dashed transparent;
-    border-bottom: 1px dashed transparent;
-    border-top: 1px dashed $white;
-    border-radius: 50%;
-    width: 37%;
-    height: 125%;
-    position: absolute;
-    z-index: 100;
-    top: 60px;
-    right: 200px;
-    opacity: 0.502;
-
-}
-
-.tip__list::after {
-    content: "";
-    border-left: 1px dashed transparent;
-    border-right: 1px dashed transparent;
-    border-bottom: 1px dashed transparent;
-    border-top: 1px dashed $white;
-    border-radius: 50%;
-    width: 37%;
-    height: 125%;
-    position: absolute;
-    z-index: 100;
-    top: 60px;
-    left: 200px;
-    opacity: 0.502;
-
-}
-
-
 
 .search {
     color: $blue ;
